--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -3,7 +3,7 @@ name: Deploy to Production VPS
 on:
   push:
     branches:
-      - main
+      - master
       - production
   workflow_dispatch:
 
