--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -71,7 +71,7 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_PORT || 22 }}
           source: "deploy/*"
-          target: "/tmp/smartlife-deploy"
+          target: "/var/www/smartlife-iot"
           strip_components: 1
 
       - name: Deploy to VPS
