--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.7",
     "@willsoto/nestjs-prometheus": "^6.0.2",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bull": "^4.16.5",
     "cache-manager": "^7.2.4",
