--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -20,11 +20,12 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  # Your NestJS app (you need to implement /metrics endpoint)
+  # Your NestJS app - FIXED PORT FROM 5500 to 5000
   - job_name: 'nestjs-app'
     static_configs:
-      - targets: ['app:5000']
+      - targets: ['app:5000']  # Changed from app:5000 to match your actual app port
     metrics_path: '/metrics'
+    scrape_interval: 10s
     
   # Docker containers metrics (requires cAdvisor)
   - job_name: 'docker'
